[gd_scene load_steps=19 format=3 uid="uid://cqsasnstdgl0g"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_cewha"]
[ext_resource type="Texture2D" uid="uid://c5je8w87a841m" path="res://assets/sprites/character.png" id="2_hflpi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qtwm5"]
atlas = ExtResource("2_hflpi")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x0m3"]
atlas = ExtResource("2_hflpi")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwhuw"]
atlas = ExtResource("2_hflpi")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpqbo"]
atlas = ExtResource("2_hflpi")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3iad"]
atlas = ExtResource("2_hflpi")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjopf"]
atlas = ExtResource("2_hflpi")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qpnu"]
atlas = ExtResource("2_hflpi")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyfa8"]
atlas = ExtResource("2_hflpi")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uc1o"]
atlas = ExtResource("2_hflpi")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k52qk"]
atlas = ExtResource("2_hflpi")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tq1c"]
atlas = ExtResource("2_hflpi")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m7x3"]
atlas = ExtResource("2_hflpi")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0win"]
atlas = ExtResource("2_hflpi")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd34r"]
atlas = ExtResource("2_hflpi")
region = Rect2(240, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_e8f1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtwm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x0m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwhuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpqbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3iad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjopf")
}],
"loop": true,
"name": &"idle",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qpnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyfa8")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uc1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k52qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tq1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m7x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0win")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd34r")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8gxfw"]
radius = 5.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_cewha")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_e8f1n")
animation = &"jump"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -15)
shape = SubResource("CapsuleShape2D_8gxfw")

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.18
one_shot = true

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
